switch to prebuilt selenium chrome

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,35 +1,17 @@
-# Use official Python slim image
-FROM python:3.11-slim
+FROM selenium/standalone-chrome:122.0
 
-# Set working directory inside the container
+USER root
+
 WORKDIR /app
 
-# Install system dependencies for Chrome and Selenium
-RUN apt-get update && apt-get install -y \
-    wget unzip xvfb libxi6 libgconf-2-4 libnss3 libxss1 libappindicator3-1 libasound2 curl gnupg \
-    && rm -rf /var/lib/apt/lists/*
+# Install Python & dependencies
+RUN apt-get update && apt-get install -y python3 python3-pip && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install Google Chrome
-RUN curl -sSL https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
-    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list && \
-    apt-get update && apt-get install -y google-chrome-stable
-
-# Install ChromeDriver (version must match Chrome)
-RUN curl -fSL https://chromedriver.storage.googleapis.com/122.0.6261.111/chromedriver_linux64.zip -o /tmp/chromedriver.zip && \
-    unzip /tmp/chromedriver.zip -d /usr/local/bin/ && \
-    rm /tmp/chromedriver.zip
-
-
-
-# Copy requirements and install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
-# Copy the entire backend code
 COPY . .
 
-# Expose the Flask port
 EXPOSE 5000
-
-# Run the app
-CMD ["python", "app.py"]
+CMD ["python3", "app.py"]
